--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -19,6 +19,26 @@
 					<ul class="timeliner blog">
 						<li>
 							<div class="timeline-meta">
+								<div class="meta_details">by Ken Alltucker / The Republic</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">Sept.
+									<span>25</span></div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="http://www.azcentral.com/story/money/business/consumers/2015/09/25/medicare-accountable-care-reforms-bring-mixed-results/72625180/" target="_blank">Medicare "Accountable Care" Reforms Bring Mixed Results</a>
+										</h2>
+										<div class="post-content"><p>A Medicare experiment that encourages doctors and hospitals to work in tandem to improve care while saving taxpayers money has produced mixed results in Arizona.</p>
+										<p>Six out of 10 Arizona health systems participating in Medicare’s “accountable care” programs spent more money than Medicare projected last year, and one program broke even. Another three health systems saved Medicare money compared to what the agency projected spending.</p></div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-meta">
 								<div class="meta_details">by Dr. Jim Whitfill / MD</div>
 							</div>
 							<div class="timeline-icon">
@@ -29,9 +49,30 @@
 								<div class="timeline-body">
 									<div class="post-item">
 										<h2 class="post-title">
-											<a href="{{ path('_p_d_f_view', {'file': 'News-2015-Shared-Savings-Program-ACOTemplate-Press-Release-for-PY14-Results.pdf'}) }}">Medicare ACOs Continue to Improve Quality of Care, Generate Shared Savings</a>
+											{#<a href="{{ path('_p_d_f_view', {'file': 'News-2015-Shared-Savings-Program-ACOTemplate-Press-Release-for-PY14-Results.pdf'}) }}">Medicare ACOs Continue to Improve Quality of Care, Generate Shared Savings</a>#}
+											<a href="http://www.healthitoutcomes.com/doc/medicare-acos-continue-to-improve-quality-generate-shared-savings-0001" target="_blank">Medicare ACOs Continue to Improve Quality of Care, Generate Shared Savings</a>
 										</h2>
-										<div class="post-content">The Centers for Medicare & Medicaid Services today issued 2014 quality and financial performance results showing that more Medicare Accountable Care Organizations (ACOs) continue to generate financial savings while improving the quality of care for Medicare beneficiaries by fostering greater collaboration between doctors, hospitals, and health care providers.</div>
+										<div class="post-content">The Centers for Medicare & Medicaid Services recently issued 2014 quality and financial performance results showing that more Medicare Accountable Care Organizations (ACOs) continue to generate financial savings while improving the quality of care for Medicare beneficiaries by fostering greater collaboration between doctors, hospitals, and health care providers.</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="timeline-meta">
+								<div class="meta_details">by The Hertel Report</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">August
+									<span>26</span></div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="https://www.thehertelreport.com/cms-releases-mssp-aco-performance-report-for-2014/" target="_blank">CMS Releases MSSP ACO Performance Report for 2014</a>
+										</h2>
+										<div class="post-content"><p>In Arizona, only two active MSSP ACOs beat their targets and only one earns a share of the savings</p>
+											<p>Nationally, 92 of 333 MSSPs hold spending to $806 million below targets and earn $341 million in shared savings. There were 89 ACOs that reduced healthcare costs below their benchmark, but did not save enough to qualify for shared savings.  Overall savings generated for CMS from the MSSP program was $465 million in 2014.</p></div>
 									</div>
 								</div>
 							</div>
