--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -9,49 +9,71 @@
 {% block body %}
 	<div class="page-header">
 		<div class="container">
-			<h1 class="title">{{ title }}</h1>
+			<h1 class="title">{% if physicians is defined %}{{ physicians[0].practice }}{% else %}{{ title }}{% endif %}</h1>
 		</div>
 	</div>
-	<section id="features" class="page-section">
-		<div class="container text-center">
-			<div class="section-title">
-				<!-- Heading -->
-				<h2 class="title">Search for a Physician</h2>
-			</div>
-			<div class="row">
-				<div class="col-sm-12">
-					<p><input type="email" class="form-control input-lg" id="search" data-search="true" placeholder="Start typing..."></p>
+	{% if physicians is defined %}
+		<section id="features" class="page-section">
+			<div class="container text-center">
+				<div class="section-title">
+					<!-- Heading -->
+					<h2 class="title">Physicians</h2>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						{% for physician in physicians %}
+							<p>{{ physician.firstName }} {{ physician.lastName }}</p>
+						{% endfor %}
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section id="results" class="no-pad-top">
-		<div class="container">
-			{#<div class="map-section"><div style="height: 376px;" data-content="Address: 5111 N. Scottsdale Rd." data-title="HonorHealth Medical Group - Chaparral" data-hue="#8eb4e3" data-type="roadmap" data-lng="-111.92494" data-lat="33.51181" data-zoomcontrol="false" data-zoom="15" class="map-canvas"></div></div>#}
-		</div>
-	</section>
-
-	<div id="myMapModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="vertical-alignment-helper">
-			<div class="modal-dialog vertical-align-center" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-						<h3 id="myModalLabel"></h3>
+		</section>
+		<section id="results" class="no-pad-top">
+			<div class="container">
+				{#<div class="map-section"><div style="height: 376px;" data-content="Address: 5111 N. Scottsdale Rd." data-title="HonorHealth Medical Group - Chaparral" data-hue="#8eb4e3" data-type="roadmap" data-lng="-111.92494" data-lat="33.51181" data-zoomcontrol="false" data-zoom="15" class="map-canvas"></div></div>#}
+			</div>
+		</section>
+	{% else %}
+		<section id="features" class="page-section">
+			<div class="container text-center">
+				<div class="section-title">
+					<!-- Heading -->
+					<h2 class="title">Search for a Physician</h2>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<p><input type="email" class="form-control input-lg" id="search" data-search="true" placeholder="Start typing..."></p>
 					</div>
-					<div class="modal-body">
-						<div class="container">
-							<div class="row">
-								<div id="modal-map-canvas" style="height: 376px;"></div>
+				</div>
+			</div>
+		</section>
+		<section id="results" class="no-pad-top">
+			<div class="container">
+				{#<div class="map-section"><div style="height: 376px;" data-content="Address: 5111 N. Scottsdale Rd." data-title="HonorHealth Medical Group - Chaparral" data-hue="#8eb4e3" data-type="roadmap" data-lng="-111.92494" data-lat="33.51181" data-zoomcontrol="false" data-zoom="15" class="map-canvas"></div></div>#}
+			</div>
+		</section>
+
+		<div id="myMapModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="vertical-alignment-helper">
+				<div class="modal-dialog vertical-align-center" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+							<h3 id="myModalLabel"></h3>
+						</div>
+						<div class="modal-body">
+							<div class="container">
+								<div class="row">
+									<div id="modal-map-canvas" style="height: 376px;"></div>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-
+	{% endif %}
 {% endblock %}
