updated search by placceholder

--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -51,7 +51,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-12">
-						<p><input type="email" class="form-control input-lg" id="search" data-search="true" placeholder="Start typing..."></p>
+						<p><input type="email" class="form-control input-lg" id="search" data-search="true" placeholder="Search by practice, address, or zip code..."></p>
 					</div>
 				</div>
 			</div>
