require at least 2 character in order to search

--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -6172,6 +6172,15 @@ textarea.form-control {
 	font-size: 0.5em;
 }
 
+/* MISC */
+#results address.row {
+	border-bottom: solid 1px #E5E5E5;
+}
+
+#results address.row:last-of-type {
+	border-bottom: none;
+}
+
 
 /******************************************************************************
   Bootstrap Elements
