created new REST service that pulls all practices and linked physicians. added function to condense the list to a multidimensional object in order to organize the data better for searching and parsing. all aspects searchable: practice, address, city, state, zip, phone, physician, specialty

--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -53,6 +53,29 @@
 					<div class="col-sm-12">
 						<p><input type="text" class="form-control input-lg" id="search" data-search="true" placeholder="Search by practice, address, or zip code..."></p>
 					</div>
+					{#<form name="search-directory-form" id="search-directory-form" action="{{ path('physician_directory') }}" method="post">#}
+						{#<div class="col-sm-12 text-left">#}
+							{#<h5>Search by:</h5>#}
+						{#</div>#}
+						{#<div class="col-sm-3">#}
+							{#<p><input type="text" class="form-control input-lg" placeholder="Practice"></p>#}
+						{#</div>#}
+						{#<div class="col-sm-3">#}
+							{#<p><input type="text" class="form-control input-lg" placeholder="Address"></p>#}
+						{#</div>#}
+						{#<div class="col-sm-1">#}
+							{#<p><input type="text" class="form-control input-lg" placeholder="Zip"></p>#}
+						{#</div>#}
+						{#<div class="col-sm-2">#}
+							{#<p><input type="text" class="form-control input-lg" placeholder="Physician"></p>#}
+						{#</div>#}
+						{#<div class="col-sm-2">#}
+							{#<p><input type="text" class="form-control input-lg" placeholder="Specialty"></p>#}
+						{#</div>#}
+						{#<div class="col-sm-1">#}
+							{#<p><input type="submit" value="Search" name="search" id="search-directory-btn" class="btn btn-primary" /></p>#}
+						{#</div>#}
+					{#</form>#}
 				</div>
 			</div>
 		</section>
