search placeholder text update

--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -51,7 +51,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-12">
-						<p><input type="text" class="form-control input-lg" id="search" data-search="true" placeholder="Search by practice, address, or zip code..."></p>
+						<p><input type="text" class="form-control input-lg" id="search" data-search="true" placeholder="Search by practice, address, zip code, physician, or specialty..."></p>
 					</div>
 					{#<form name="search-directory-form" id="search-directory-form" action="{{ path('physician_directory') }}" method="post">#}
 						{#<div class="col-sm-12 text-left">#}
