adjusted sizing for responsive search form

--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -69,23 +69,23 @@
 						{#<div class="col-xs-6 col-sm-2">#}
 							{#<p><input type="text" class="form-control input-lg" id="search-phone" data-search="true" placeholder="Phone"></p>#}
 						{#</div>#}
-						<div class="col-xs-12 col-sm-5">
+						<div class="col-xs-12 col-sm-4 col-md-5">
 							<p><input type="text" class="form-control input-lg" id="search-address" data-search="true" placeholder="Street Address"></p>
 						</div>
 						{#<div class="col-xs-6 col-sm-2 col-md-1">#}
 							{#<p><input type="text" class="form-control input-lg" id="search-suite" data-search="true" placeholder="Suite #"></p>#}
 						{#</div>#}
-						<div class="col-xs-6 col-sm-3">
+						<div class="col-xs-6 col-sm-3 col-md-3">
 							<p><input type="text" class="form-control input-lg" id="search-city" data-search="true" placeholder="City"></p>
 						</div>
 						{#<div class="col-xs-4 col-sm-2 col-md-3">#}
 							{#<p><input type="text" class="form-control input-lg" id="search-state" data-search="true" placeholder="State"></p>#}
 						{#</div>#}
-						<div class="col-xs-6 col-sm-2">
+						<div class="col-xs-6 col-sm-2 col-md-2">
 							<p><input type="text" class="form-control input-lg" id="search-zip" data-search="true" placeholder="Zip"></p>
 						</div>
-						<div class="col-xs-12 col-sm-2">
-							<button type="button" id="physician-search-btn" class="btn btn-primary full-width">Search</button>
+						<div class="col-xs-12 col-sm-3 col-md-2">
+							<button type="button" id="physician-search-btn" class="btn btn-primary full-width"><i class="fa fa-search"></i> Search for PCP</button>
 						</div>
 					</form>
 				</div>
