updated wording for search

--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -61,7 +61,7 @@
 							<p><input type="text" class="form-control input-lg" id="search-practice" data-search="true" placeholder="Practice"></p>
 						</div>
 						<div class="col-xs-6 col-sm-3">
-							<p><input type="text" class="form-control input-lg" id="search-physician" data-search="true" placeholder="Physician"></p>
+							<p><input type="text" class="form-control input-lg" id="search-physician" data-search="true" placeholder="Physician First Name or Last Name"></p>
 						</div>
 						<div class="col-xs-6 col-sm-3">
 							<p><input type="text" class="form-control input-lg" id="search-specialty" data-search="true" placeholder="Specialty"></p>
