--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,26 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+						<li class="timeline-inverted">
+							<div class="timeline-meta">
+								<div class="meta_details">by Faron Thompson / Scottsdale Health Partners</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">Oct.
+									<span>15</span></div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="{{ path('_p_d_f_view', {'file': 'Going-At-Risk---A-Vision-for-Connected-Care.pdf'}) }}">Going At Risk - A Vision for Connected Care</a>
+										</h2>
+										<div class="post-content"><p>The nation’s healthcare system has reached a critical moment in its evolution. Healthcare organiza- tions across the United States are investing significant resources in re-architecting care delivery infrastructures to adapt successfully to new value-based models.</p>
+										<p>As we go “at risk” and accept outcome-based payments, we face a broad set of challenges—one of the most critical being development of the right IT infrastructure&hellip;</p></div>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li>
 							<div class="timeline-meta">
 								<div class="meta_details">by Ken Alltucker / The Republic</div>
@@ -32,7 +52,7 @@
 											<a href="http://www.azcentral.com/story/money/business/consumers/2015/09/25/medicare-accountable-care-reforms-bring-mixed-results/72625180/" target="_blank">Medicare "Accountable Care" Reforms Bring Mixed Results</a>
 										</h2>
 										<div class="post-content"><p>A Medicare experiment that encourages doctors and hospitals to work in tandem to improve care while saving taxpayers money has produced mixed results in Arizona.</p>
-										<p>Six out of 10 Arizona health systems participating in Medicare’s “accountable care” programs spent more money than Medicare projected last year, and one program broke even. Another three health systems saved Medicare money compared to what the agency projected spending.</p></div>
+										<p>Six out of 10 Arizona health systems participating in Medicare’s “accountable care” programs spent more money than Medicare projected last year, and one program broke even. Another three health systems saved Medicare money compared to what the agency projected spending&hellip;</p></div>
 									</div>
 								</div>
 							</div>
@@ -52,7 +72,7 @@
 											{#<a href="{{ path('_p_d_f_view', {'file': 'News-2015-Shared-Savings-Program-ACOTemplate-Press-Release-for-PY14-Results.pdf'}) }}">Medicare ACOs Continue to Improve Quality of Care, Generate Shared Savings</a>#}
 											<a href="http://www.healthitoutcomes.com/doc/medicare-acos-continue-to-improve-quality-generate-shared-savings-0001" target="_blank">Medicare ACOs Continue to Improve Quality of Care, Generate Shared Savings</a>
 										</h2>
-										<div class="post-content">The Centers for Medicare & Medicaid Services recently issued 2014 quality and financial performance results showing that more Medicare Accountable Care Organizations (ACOs) continue to generate financial savings while improving the quality of care for Medicare beneficiaries by fostering greater collaboration between doctors, hospitals, and health care providers.</div>
+										<div class="post-content">The Centers for Medicare & Medicaid Services recently issued 2014 quality and financial performance results showing that more Medicare Accountable Care Organizations (ACOs) continue to generate financial savings while improving the quality of care for Medicare beneficiaries by fostering greater collaboration between doctors, hospitals, and health care providers&hellip;</div>
 									</div>
 								</div>
 							</div>
@@ -72,7 +92,7 @@
 											<a href="https://www.thehertelreport.com/cms-releases-mssp-aco-performance-report-for-2014/" target="_blank">CMS Releases MSSP ACO Performance Report for 2014</a>
 										</h2>
 										<div class="post-content"><p>In Arizona, only two active MSSP ACOs beat their targets and only one earns a share of the savings</p>
-											<p>Nationally, 92 of 333 MSSPs hold spending to $806 million below targets and earn $341 million in shared savings. There were 89 ACOs that reduced healthcare costs below their benchmark, but did not save enough to qualify for shared savings.  Overall savings generated for CMS from the MSSP program was $465 million in 2014.</p></div>
+											<p>Nationally, 92 of 333 MSSPs hold spending to $806 million below targets and earn $341 million in shared savings. There were 89 ACOs that reduced healthcare costs below their benchmark, but did not save enough to qualify for shared savings.  Overall savings generated for CMS from the MSSP program was $465 million in 2014&hellip;</p></div>
 									</div>
 								</div>
 							</div>
@@ -91,7 +111,7 @@
 										<h2 class="post-title">
 											<a target="_blank" href="http://www.himss.org/Events/EventDetail.aspx?ItemNumber=42376">How Secure Texting Supports Readmission Reduction</a>
 										</h2>
-										<div class="post-content">Sending important patient information via emails or pages can cause a lag time on responses, a longer stay for patients and added costs for the facility. But by utilizing a text messaging technology that physicians and staff already use, you can streamline the entire process from when a patient is admitted to your facility until discharge.</div>
+										<div class="post-content">Sending important patient information via emails or pages can cause a lag time on responses, a longer stay for patients and added costs for the facility. But by utilizing a text messaging technology that physicians and staff already use, you can streamline the entire process from when a patient is admitted to your facility until discharge&hellip;</div>
 									</div>
 								</div>
 							</div>
@@ -112,7 +132,7 @@
 										</h2>
 										<div class="post-content">
 											<p>During a panel at HIMSS this week, payer, pharmacist, physician and hospital folks all came together to chew over what's blocking their organizations from transitioning into value-based care.</p>
-											<p>CHICAGO — Everyone is maneuvering into a position of strength in the new world of health care — be it payers, pharmacists, hospitals or doctors — while still paying the bills in the old one. What's the biggest obstacle standing in each organization's path, and is it the same from field to field?</p>
+											<p>CHICAGO — Everyone is maneuvering into a position of strength in the new world of health care — be it payers, pharmacists, hospitals or doctors — while still paying the bills in the old one. What's the biggest obstacle standing in each organization's path, and is it the same from field to field?&hellip;</p>
 										</div>
 									</div>
 								</div>
@@ -133,7 +153,7 @@
 											<a href="{{ path('_p_d_f_view', {'file': 'Scottsdale-Health-Partners-Case-Study.pdf'}) }}">Leading ACO, {{ company_name }}, Reduces Care Coordination Costs by 10% with TigerText</a>
 										</h2>
 										<div class="post-content">
-											<p>{{ company_name }} (SHP) is a physician-led Clinical Integration Network and Accountable Care Organization (ACO) aiming to transform care delivery in the Arizona community. It is a joint venture formed by Scottsdale Lincoln Health Network (SLHN) and the Scottsdale Physician Organization, which is comprised of over 600 community physicians. SHP's network oers a world-class healthcare network of hospitals, physicians and clinicians that provides patients with a comprehensive, cohesive and integrated experience from their doctor’s oce to the hospital to ongoing care settings.</p>
+											<p>{{ company_name }} (SHP) is a physician-led Clinical Integration Network and Accountable Care Organization (ACO) aiming to transform care delivery in the Arizona community. It is a joint venture formed by Scottsdale Lincoln Health Network (SLHN) and the Scottsdale Physician Organization, which is comprised of over 600 community physicians. SHP's network oers a world-class healthcare network of hospitals, physicians and clinicians that provides patients with a comprehensive, cohesive and integrated experience from their doctor’s oce to the hospital to ongoing care settings&hellip;</p>
 										</div>
 									</div>
 								</div>
@@ -160,7 +180,7 @@
 										</h2>
 										<div class="post-content">
 											<p>{{ company_name }} and Cigna Corp. are teaming up to launch a collaborative accountable care initiative.</p>
-											<p>Collaborative accountable care is Cigna’s approach to accomplishing the same goals as accountable care organizations, without creating a formal ACO. The initiative is designed to improve patient access to health care, enhance care coordination and reduce costs.</p>
+											<p>Collaborative accountable care is Cigna’s approach to accomplishing the same goals as accountable care organizations, without creating a formal ACO. The initiative is designed to improve patient access to health care, enhance care coordination and reduce costs&hellip;</p>
 										</div>
 									</div>
 								</div>
