--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -1123,6 +1123,20 @@ i.fa-1x{
 	top:50%;
 	width:40px;
 }
+.results-loader-item {
+	background:none repeat scroll 0 0 #FFFFFF;
+	border-bottom:3px solid rgba(0,0,0,0) !important;
+	border-left:3px solid;
+	border-radius:200px;
+	-moz-border-radius:200px;
+	-webkit-border-radius:200px;
+	-o-border-radius:200px;
+	-ms-border-radius:200px;
+	border-right:3px solid;
+	border-top:3px solid;
+	height:40px;
+	width:40px;
+}
 .loader-item h2 {
 	color:#CCCCCC;
 	font-size:20px;
@@ -6182,6 +6196,42 @@ textarea.form-control {
 
 #results address.row:last-of-type {
 	border-bottom: none;
+}
+
+.spinner {
+	display: inline-block;
+	opacity: 0;
+	width: 0;
+
+	-webkit-transition: opacity 0.25s, width 0.25s;
+	-moz-transition: opacity 0.25s, width 0.25s;
+	-o-transition: opacity 0.25s, width 0.25s;
+	transition: opacity 0.25s, width 0.25s;
+}
+
+.has-spinner.active {
+	cursor:progress;
+}
+
+.has-spinner.active .spinner {
+	opacity: 1;
+	width: auto; /* This doesn't work, just fix for unkown width elements */
+}
+
+.has-spinner.btn-mini.active .spinner {
+	width: 10px;
+}
+
+.has-spinner.btn-small.active .spinner {
+	width: 13px;
+}
+
+.has-spinner.btn.active .spinner {
+	width: 16px;
+}
+
+.has-spinner.btn-large.active .spinner {
+	width: 19px;
 }
 
 
