--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,25 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+						<li>
+							<div class="timeline-meta">
+								<div class="meta_details">by Orion Health</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">Nov.
+									<span>05</span></div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="https://pages.questexweb.com/OrionHealth-Registration-20151105.html" target="_blank">Journey to MSSP Management with Tailored ACO Web-Based Solution</a>
+										</h2>
+										<div class="post-content"><p>Medicare Shared Savings Program (MSSP) ACOs need a purpose-built MSSP Management solution to streamline the complexities of participating in the MSSP. Being an MSSP ACO comes with considerable administrative and compliance requirements that can be time and resource intensive without applying purpose-built technologies&hellip;</p></div>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li class="timeline-inverted">
 							<div class="timeline-meta">
 								<div class="meta_details">by Faron Thompson / Scottsdale Health Partners</div>
