--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -74,22 +74,32 @@
 						{#<div class="col-xs-6 col-sm-2">#}
 							{#<p><input type="text" class="form-control input-lg" id="search-phone" data-search="true" placeholder="Phone"></p>#}
 						{#</div>#}
-						<div class="col-xs-12 col-sm-4 col-md-5">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
 							<p><input type="text" class="form-control input-lg" id="search-address" data-search="true" placeholder="Street Address" /></p>
 						</div>
 						{#<div class="col-xs-6 col-sm-2 col-md-1">#}
 							{#<p><input type="text" class="form-control input-lg" id="search-suite" data-search="true" placeholder="Suite #"></p>#}
 						{#</div>#}
-						<div class="col-xs-6 col-sm-3 col-md-3">
+						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
 							<p><input type="text" class="form-control input-lg" id="search-city" data-search="true" placeholder="City" /></p>
 						</div>
 						{#<div class="col-xs-4 col-sm-2 col-md-3">#}
 							{#<p><input type="text" class="form-control input-lg" id="search-state" data-search="true" placeholder="State"></p>#}
 						{#</div>#}
-						<div class="col-xs-6 col-sm-2 col-md-2">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">
 							<p><input type="text" class="form-control input-lg" id="search-zip" data-search="true" placeholder="Zip" /></p>
 						</div>
-						<div class="col-xs-12 col-sm-3 col-md-2">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">
+							<p>
+								<select name="search-distance" id="search-distance" data-search="true" class="form-control">
+									<option value="5">5 Miles</option>
+									<option value="10">10 Miles</option>
+									<option value="25">25 Miles</option>
+									<option value="50">50 Miles</option>
+								</select>
+							</p>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2">
 							<button type="button" id="physician-search-btn" class="btn btn-primary full-width has-spinner"><span class="spinner"><i class="icon-spin icon-refresh"></i> Searching&hellip;</span><i class="fa fa-search"></i> Search Directory</button>
 						</div>
 					</form>
