updated Public Reporting for year 1 to $1,833,120.63

--- a/src/SiteBundle/Resources/views/Aco/acoReporting.html.twig
+++ b/src/SiteBundle/Resources/views/Aco/acoReporting.html.twig
@@ -220,7 +220,7 @@
 							<div id="amount" class="panel-collapse collapse">
 								<div class="panel-body">
 									<ul class="list-style">
-										<li>Performance Year 1: TBD</li>
+										<li>Performance Year 1: $1,833,120.63</li>
 										<li>Performance Year 2: TBD</li>
 										<li>Performance Year 3: TBD</li>
 									</ul>
