made news changes

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,26 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+						<li class="timeline-inverted">
+							<div class="timeline-meta">
+								<div class="meta_details">by Faron Thompson / Scottsdale Health Partners</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">Dec.
+									<span>23</span></div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="{{ path('_p_d_f_view', {'file': 'aco-spotlight.pdf'}) }}">Shared Savings Program ACO Spotlight Newsletter</a>
+										</h2>
+										<div class="post-content"><p>In order to participate in quality reporting for performance year 2015, you must have Enterprise Identity Management (EIDM) accounts and roles for access to the Group Practice Reporting Option Web Interface (GPRO WI). CMS has transitioned from IACS to EIDM, therefore Individuals Authorized Access to the CMS Computer Services (IACS) accounts cannot be created or used.</p>
+										<p>The audio recording for the December 22, 2015 GPRO WI Q &amp; A Session which covered&hellip;</p></div>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li>
 							<div class="timeline-meta">
 								<div class="meta_details">by Orion Health</div>
