--- a/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/physicianDirectory.html.twig
@@ -43,67 +43,48 @@
 			</div>
 		</section>
 	{% else %}
+
+
 		<section id="features" class="page-section">
 			<div class="container text-center">
 				<div class="section-title">
 					<!-- Heading -->
 					<h2 class="title">Search for a Physician</h2>
 				</div>
-				<div class="row">
-					{#<div class="col-sm-12">#}
-						{#<p><input type="text" class="form-control input-lg" data-search="true" placeholder="Search by practice, address, zip code, physician, or specialty..."></p>#}
-					{#</div>#}
-					<form name="search-directory-form" id="search-directory-form" action="{{ path('physician_directory') }}" method="post">
+				{{ form_start(form) }}
+					{#{{ form_widget(form) }}#}
+					<div class="row">
 						<div class="col-sm-12 text-left">
-							<h5>Search by:</h5>
-						</div>
-						<div class="col-sm-12 text-left">
-							<p><input type="radio" id="search-pcp" name="search-pcp" value="pcp" data-search="true" /> Search for PCP</p>
-							{#<input type="hidden" name="search-pcp-type[]" value="family medicine" />#}
-							{#<input type="hidden" name="search-pcp-type[]" value="internal medicine" />#}
+							{{ form_widget(form.search_pcp, {'attr': {'data-search': 'true'} }) }}
+							{{ form_label(form.search_pcp) }}
 						</div>
 						<div class="col-xs-12 col-sm-6">
-							<p><input type="text" class="form-control input-lg" id="search-practice" data-search="true" placeholder="Practice" /></p>
+							{{ form_widget(form.search_practice, { 'attr': {'class': 'form-control input-lg', 'data-search': 'true'} }) }}
 						</div>
 						<div class="col-xs-6 col-sm-3">
-							<p><input type="text" class="form-control input-lg" id="search-physician" data-search="true" placeholder="Physician First Name or Last Name" /></p>
+							{{ form_widget(form.search_physician, { 'attr': {'class': 'form-control input-lg', 'data-search': 'true'} }) }}
 						</div>
 						<div class="col-xs-6 col-sm-3">
-							<p><input type="text" class="form-control input-lg" id="search-specialty" data-search="true" placeholder="Specialty" /></p>
+							{{ form_widget(form.search_specialty, { 'attr': {'class': 'form-control', 'data-search': 'true'} }) }}
 						</div>
-						{#<div class="col-xs-6 col-sm-2">#}
-							{#<p><input type="text" class="form-control input-lg" id="search-phone" data-search="true" placeholder="Phone"></p>#}
-						{#</div>#}
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-							<p><input type="text" class="form-control input-lg" id="search-address" data-search="true" placeholder="Street Address" /></p>
+							{{ form_widget(form.search_address, { 'attr': {'class': 'form-control input-lg', 'data-search': 'true'} }) }}
 						</div>
-						{#<div class="col-xs-6 col-sm-2 col-md-1">#}
-							{#<p><input type="text" class="form-control input-lg" id="search-suite" data-search="true" placeholder="Suite #"></p>#}
-						{#</div>#}
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-							<p><input type="text" class="form-control input-lg" id="search-city" data-search="true" placeholder="City" /></p>
-						</div>
-						{#<div class="col-xs-4 col-sm-2 col-md-3">#}
-							{#<p><input type="text" class="form-control input-lg" id="search-state" data-search="true" placeholder="State"></p>#}
-						{#</div>#}
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">
-							<p><input type="text" class="form-control input-lg" id="search-zip" data-search="true" placeholder="Zip" /></p>
+							{{ form_widget(form.search_city, { 'attr': {'class': 'form-control input-lg', 'data-search': 'true'} }) }}
 						</div>
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">
-							<p>
-								<select name="search-distance" id="search-distance" data-search="true" class="form-control">
-									<option value="5">5 Miles</option>
-									<option value="10">10 Miles</option>
-									<option value="25">25 Miles</option>
-									<option value="50">50 Miles</option>
-								</select>
-							</p>
+							{{ form_widget(form.search_zip, { 'attr': {'class': 'form-control input-lg', 'data-search': 'true'} }) }}
+						</div>
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">
+							{{ form_widget(form.search_distance, { 'attr': {'class': 'form-control', 'data-search': 'true'} }) }}
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2">
-							<button type="button" id="physician-search-btn" class="btn btn-primary full-width has-spinner"><span class="spinner"><i class="icon-spin icon-refresh"></i> Searching&hellip;</span><i class="fa fa-search"></i> Search Directory</button>
+							<button type="submit" id="physician-search-btn" class="btn btn-primary full-width has-spinner"><span class="spinner"><i class="icon-spin icon-refresh"></i> Searching&hellip;</span><i class="fa fa-search"></i> Search Directory</button>
+							{#<input type="submit" id="physician-search-btn" class="btn btn-primary full-width has-spinner" value="" />#}
 						</div>
-					</form>
-				</div>
+					</div>
+				{{ form_end(form) }}
 			</div>
 
 			<div id="resultsloader" class="text-center">
@@ -111,6 +92,76 @@
 			</div>
 
 		</section>
+
+
+		{#<section id="features" class="page-section">#}
+			{#<div class="container text-center">#}
+				{#<div class="section-title">#}
+					{#<!-- Heading -->#}
+					{#<h2 class="title">Search for a Physician</h2>#}
+				{#</div>#}
+				{#<div class="row">#}
+					{#&#123;&#35;<div class="col-sm-12">&#35;&#125;#}
+						{#&#123;&#35;<p><input type="text" class="form-control input-lg" data-search="true" placeholder="Search by practice, address, zip code, physician, or specialty..."></p>&#35;&#125;#}
+					{#&#123;&#35;</div>&#35;&#125;#}
+					{#<form name="search-directory-form" id="search-directory-form" action="{{ path('physician_directory') }}" method="post">#}
+						{#<div class="col-sm-12 text-left">#}
+							{#<h5>Search by:</h5>#}
+						{#</div>#}
+						{#<div class="col-sm-12 text-left">#}
+							{#<p><input type="radio" id="search-pcp" name="search-pcp" value="pcp" data-search="true" /> Search for PCP</p>#}
+							{#&#123;&#35;<input type="hidden" name="search-pcp-type[]" value="family medicine" />&#35;&#125;#}
+							{#&#123;&#35;<input type="hidden" name="search-pcp-type[]" value="internal medicine" />&#35;&#125;#}
+						{#</div>#}
+						{#<div class="col-xs-12 col-sm-6">#}
+							{#<p><input type="text" class="form-control input-lg" id="search-practice" data-search="true" placeholder="Practice" /></p>#}
+						{#</div>#}
+						{#<div class="col-xs-6 col-sm-3">#}
+							{#<p><input type="text" class="form-control input-lg" id="search-physician" data-search="true" placeholder="Physician First Name or Last Name" /></p>#}
+						{#</div>#}
+						{#<div class="col-xs-6 col-sm-3">#}
+							{#<p><input type="text" class="form-control input-lg" id="search-specialty" data-search="true" placeholder="Specialty" /></p>#}
+						{#</div>#}
+						{#&#123;&#35;<div class="col-xs-6 col-sm-2">&#35;&#125;#}
+							{#&#123;&#35;<p><input type="text" class="form-control input-lg" id="search-phone" data-search="true" placeholder="Phone"></p>&#35;&#125;#}
+						{#&#123;&#35;</div>&#35;&#125;#}
+						{#<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">#}
+							{#<p><input type="text" class="form-control input-lg" id="search-address" data-search="true" placeholder="Street Address" /></p>#}
+						{#</div>#}
+						{#&#123;&#35;<div class="col-xs-6 col-sm-2 col-md-1">&#35;&#125;#}
+							{#&#123;&#35;<p><input type="text" class="form-control input-lg" id="search-suite" data-search="true" placeholder="Suite #"></p>&#35;&#125;#}
+						{#&#123;&#35;</div>&#35;&#125;#}
+						{#<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">#}
+							{#<p><input type="text" class="form-control input-lg" id="search-city" data-search="true" placeholder="City" /></p>#}
+						{#</div>#}
+						{#&#123;&#35;<div class="col-xs-4 col-sm-2 col-md-3">&#35;&#125;#}
+							{#&#123;&#35;<p><input type="text" class="form-control input-lg" id="search-state" data-search="true" placeholder="State"></p>&#35;&#125;#}
+						{#&#123;&#35;</div>&#35;&#125;#}
+						{#<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">#}
+							{#<p><input type="text" class="form-control input-lg" id="search-zip" data-search="true" placeholder="Zip" /></p>#}
+						{#</div>#}
+						{#<div class="col-xs-6 col-sm-4 col-md-4 col-lg-2">#}
+							{#<p>#}
+								{#<select name="search-distance" id="search-distance" data-search="true" class="form-control">#}
+									{#<option value="5">5 Miles</option>#}
+									{#<option value="10">10 Miles</option>#}
+									{#<option value="25">25 Miles</option>#}
+									{#<option value="50">50 Miles</option>#}
+								{#</select>#}
+							{#</p>#}
+						{#</div>#}
+						{#<div class="col-xs-12 col-sm-4 col-md-4 col-lg-2">#}
+							{#<button type="button" id="physician-search-btn" class="btn btn-primary full-width has-spinner"><span class="spinner"><i class="icon-spin icon-refresh"></i> Searching&hellip;</span><i class="fa fa-search"></i> Search Directory</button>#}
+						{#</div>#}
+					{#</form>#}
+				{#</div>#}
+			{#</div>#}
+
+			{#<div id="resultsloader" class="text-center">#}
+				{#<div class="results-loader-item fa fa-spin text-color hidden"></div>#}
+			{#</div>#}
+
+		{#</section>#}
 
 		<section id="results" class="no-pad-top">
 			<div class="container">
