new news posting added

--- a/src/SiteBundle/Resources/views/News/news.html.twig
+++ b/src/SiteBundle/Resources/views/News/news.html.twig
@@ -17,6 +17,29 @@
 			<div class="row">
 				<div class="col-md-12">
 					<ul class="timeliner blog">
+						<li>
+							<div class="timeline-meta">
+								<div class="meta_details">by Healthcare Informatics</div>
+							</div>
+							<div class="timeline-icon">
+								<div class="date">Feb.
+									<span>10</span>
+								</div>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-body">
+									<div class="post-item">
+										<h2 class="post-title">
+											<a href="http://www.healthcare-informatics.com/article/2016-healthcare-informatics-innovator-awards-second-place-winner-scottsdale-health-partners" target="_blank">The 2016 Healthcare Informatics Innovator Awards: Second Place Winner - Scottsdale Health Partners</a>
+										</h2>
+										<div class="post-content">
+											<p>Scottsdale Health Partners (SHP), a physician-led clinical integration network, was formed in 2012 and has quickly grown to 700 physicians serving 35,000 patients throughout the greater Scottsdale, Arizona community. SHP consists of 115 primary care physicians and the balance are specialists from a wide variety of specialties&hellip;</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</li>
+
 						<li class="timeline-inverted">
 							<div class="timeline-meta">
 								<div class="meta_details">by Faron Thompson / Scottsdale Health Partners</div>
